--- a/android/.gitignore
+++ b/android/.gitignore
@@ -47,12 +47,14 @@ captures/
 
 # IntelliJ
 *.iml
+.idea/compiler.xml
 .idea/workspace.xml
 .idea/tasks.xml
 .idea/gradle.xml
 .idea/assetWizardSettings.xml
 .idea/dictionaries
 .idea/libraries
+.idea/jarRepositories.xml
 # Android Studio 3 in .gitignore file.
 .idea/caches
 .idea/modules.xml
@@ -62,7 +64,7 @@ captures/
 # Keystore files
 # Uncomment the following lines if you do not want to check your keystore files in.
 #*.jks
-#*.keystore
+*.keystore
 
 # External native build folder generated in Android Studio 2.2 and later
 .externalNativeBuild
