--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
+    ndkVersion '21.3.6528147'
     compileSdkVersion rootProject.ext.compileSdkVersion
     defaultConfig {
         applicationId "org.lichess.mobileapp"
@@ -40,7 +41,7 @@ dependencies {
     androidTestImplementation "androidx.test.ext:junit:$androidxJunitVersion"
     androidTestImplementation "androidx.test.espresso:espresso-core:$androidxEspressoCoreVersion"
     implementation project(':capacitor-cordova-android-plugins')
-    implementation('com.google.firebase:firebase-messaging:18.0.0') {
+    implementation('com.google.firebase:firebase-messaging:21.0.1') {
       exclude group: 'com.google.firebase', module: 'firebase-core'
       exclude group: 'com.google.firebase', module: 'firebase-analytics'
       exclude group: 'com.google.firebase', module: 'firebase-measurement-connector'
