--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
         "autoprefixer-stylus": "1.0.0",
         "concurrently": "5.0.0",
         "http-server": "0.12.0",
-        "jest": "24.7.1",
+        "jest": "^26.0.0",
         "jetifier": "1.6.5",
         "mustache": "3.1.0",
         "rimraf": "3.0.2",
@@ -39,9 +39,10 @@
         "rollup-plugin-terser": "7.0.2",
         "rollup-plugin-visualizer": "4.0.4",
         "stylus": "0.54.7",
+        "ts-jest": "26.4.4",
         "tslint": "5.8.0",
         "typescript": "4.1.2",
-        "whatwg-fetch": "3.0.0"
+        "whatwg-fetch": "3.5.0"
     },
     "dependencies": {
         "@badrap/result": "0.2.6",
@@ -87,19 +88,5 @@
         "prebuild": "npm run clean && npm run compile",
         "build": "node scripts/inject-conf && concurrently 'npm:compile-date-locales' 'npm:styles' 'rollup -c' && npx cap copy",
         "run-android": "npm run build && cd android && ./gradlew installDebug"
-    },
-    "jest": {
-        "moduleFileExtensions": [
-            "ts",
-            "tsx",
-            "js"
-        ],
-        "transform": {
-            "^.+\\.(ts|tsx)$": "<rootDir>/testPreprocessor.js"
-        },
-        "testMatch": [
-            "**/__tests__/*.(ts|tsx|js)"
-        ],
-        "verbose": true
     }
 }
