--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -8,6 +8,7 @@ android {
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        buildConfigField 'Boolean', 'NNUE', 'false'
     }
     signingConfigs {
         release {
@@ -28,6 +29,7 @@ android {
     flavorDimensions 'nnue'
     productFlavors {
         withNNUE {
+            buildConfigField 'Boolean', 'NNUE', 'true'
             dimension 'nnue'
         }
         withoutNNUE {
@@ -35,6 +37,7 @@ android {
         }
     }
 }
+
 
 repositories {
     maven {
