--- a/package.json
+++ b/package.json
@@ -57,8 +57,8 @@
         "@types/d3": "4.5.0",
         "@types/lodash-es": "4.17.3",
         "capacitor-sound-effect": "git+https://github.com/veloce/capacitor-sound-effect.git",
-        "capacitor-stockfish": "file:../capacitor-stockfish",
-        "capacitor-stockfish-variants": "file:../capacitor-stockfish-variants",
+        "capacitor-stockfish": "git+https://github.com/veloce/capacitor-stockfish.git",
+        "capacitor-stockfish-variants": "git+https://github.com/veloce/capacitor-stockfish.git#variants",
         "chessops": "0.7.3",
         "cordova-plugin-fullscreen": "1.2.0",
         "d3-axis": "1.0.8",
