Use withoutNNUE flavor by default

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -29,6 +29,7 @@ android {
     flavorDimensions 'nnue'
     productFlavors {
         withoutNNUE {
+            isDefault true
             dimension 'nnue'
         }
         withNNUE {
