--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -21,6 +21,9 @@ android {
             minifyEnabled false
             // shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            ndk {
+                debugSymbolLevel 'full'
+            }
         }
     }
     packagingOptions {
