--- a/scripts/package.json
+++ b/scripts/package.json
@@ -3,7 +3,9 @@
     "i18n-update": "npx tsc i18n-update.ts && node i18n-update.js"
   },
   "devDependencies": {
+    "@types/js-yaml": "^4.0.0",
     "colors": "^1.3.3",
+    "js-yaml": "^4.0.0",
     "request": "^2.88.0",
     "typescript": "^4.1.3",
     "xml2js": "^0.4.22"
