WIP on migrating to capacitor 3.0

--- a/package.json
+++ b/package.json
@@ -50,9 +50,13 @@
         "@badrap/result": "0.2.6",
         "@capacitor-community/keep-awake": "1.0.0",
         "@capacitor/android": "2.4.6",
-        "@capacitor/cli": "2.4.6",
-        "@capacitor/core": "2.4.6",
+        "@capacitor/app": "1.0.0",
+        "@capacitor/cli": "3.0.0",
+        "@capacitor/core": "3.0.0",
         "@capacitor/ios": "2.4.6",
+        "@capacitor/keyboard": "1.0.0",
+        "@capacitor/share": "1.0.0",
+        "@capacitor/toast": "1.0.0",
         "@rollup/plugin-alias": "3.1.1",
         "@types/d3": "4.5.0",
         "@types/lodash-es": "4.17.3",
