--- a/android/app/src/main/assets/capacitor.config.json
+++ b/android/app/src/main/assets/capacitor.config.json
@@ -1,14 +1,17 @@
 {
-  "appId": "org.lichess.mobileapp",
-  "appName": "lichess",
-  "bundledWebRuntime": false,
-  "npmClient": "npm",
-  "webDir": "www",
-  "backgroundColor": "ff000000",
-  "appendUserAgent": "Lichobile/7.11.1",
-  "plugins": {
-    "PushNotifications": {
-      "presentationOptions": ["sound", "alert"]
-    }
-  }
+	"appId": "org.lichess.mobileapp",
+	"appName": "lichess",
+	"bundledWebRuntime": false,
+	"npmClient": "npm",
+	"webDir": "www",
+	"backgroundColor": "ff000000",
+	"appendUserAgent": "Lichobile/7.11.1",
+	"plugins": {
+		"PushNotifications": {
+			"presentationOptions": [
+				"sound",
+				"alert"
+			]
+		}
+	}
 }
