More wip on capacitor

--- a/package.json
+++ b/package.json
@@ -53,9 +53,11 @@
         "@capacitor/app": "1.0.0",
         "@capacitor/cli": "3.0.0",
         "@capacitor/core": "3.0.0",
+        "@capacitor/device": "1.0.0",
         "@capacitor/dialog": "1.0.0",
         "@capacitor/ios": "2.4.6",
         "@capacitor/keyboard": "1.0.0",
+        "@capacitor/network": "1.0.0",
         "@capacitor/share": "1.0.0",
         "@capacitor/toast": "1.0.0",
         "@rollup/plugin-alias": "3.1.1",
