Migrate more plugins to capacitor 3.0

--- a/package.json
+++ b/package.json
@@ -55,10 +55,15 @@
         "@capacitor/core": "3.0.0",
         "@capacitor/device": "1.0.0",
         "@capacitor/dialog": "1.0.0",
+        "@capacitor/filesystem": "1.0.0",
         "@capacitor/ios": "2.4.6",
         "@capacitor/keyboard": "1.0.0",
         "@capacitor/network": "1.0.0",
+        "@capacitor/push-notifications": "1.0.0",
         "@capacitor/share": "1.0.0",
+        "@capacitor/splash-screen": "1.0.0",
+        "@capacitor/status-bar": "1.0.0",
+        "@capacitor/storage": "1.0.0",
         "@capacitor/toast": "1.0.0",
         "@rollup/plugin-alias": "3.1.1",
         "@types/d3": "4.5.0",
