WIP on capacitor3 android

--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "dependencies": {
         "@badrap/result": "0.2.6",
         "@capacitor-community/keep-awake": "1.0.0",
-        "@capacitor/android": "2.4.6",
+        "@capacitor/android": "3.0.0",
         "@capacitor/app": "1.0.0",
         "@capacitor/cli": "3.0.0",
         "@capacitor/core": "3.0.0",
@@ -68,9 +68,9 @@
         "@rollup/plugin-alias": "3.1.1",
         "@types/d3": "4.5.0",
         "@types/lodash-es": "4.17.3",
-        "capacitor-sound-effect": "git+https://github.com/veloce/capacitor-sound-effect.git",
-        "capacitor-stockfish": "git+https://github.com/veloce/capacitor-stockfish.git",
-        "capacitor-stockfish-variants": "git+https://github.com/veloce/capacitor-stockfish.git#variants",
+        "capacitor-sound-effect": "file:../temp-sound-effect",
+        "capacitor-stockfish": "file:../capacitor-stockfish",
+        "capacitor-stockfish-variants": "file:../capacitor-stockfish-variants",
         "chessops": "0.8.1",
         "cordova-plugin-fullscreen": "1.2.0",
         "d3-axis": "1.0.8",
