--- a/ios/App/Podfile
+++ b/ios/App/Podfile
@@ -22,8 +22,8 @@ def capacitor_pods
   pod 'CapacitorStatusBar', :path => '../../node_modules/@capacitor/status-bar'
   pod 'CapacitorStorage', :path => '../../node_modules/@capacitor/storage'
   pod 'CapacitorToast', :path => '../../node_modules/@capacitor/toast'
-  pod 'CapacitorSoundEffect', :path => '../../node_modules/capacitor-sound-effect'
-  pod 'CapacitorStockfishVariants', :path => '../../node_modules/capacitor-stockfish-variants'
+  pod 'CapacitorSoundEffect', :path => '../../../temp-sound-effect'
+  pod 'CapacitorStockfishVariants', :path => '../../../capacitor-stockfish-variants'
 end
 
 target 'lichess' do
