More wip on capacitor 3

--- a/package.json
+++ b/package.json
@@ -48,14 +48,17 @@
     },
     "dependencies": {
         "@badrap/result": "0.2.6",
-        "@capacitor-community/keep-awake": "1.0.0",
+        "@capacitor-community/keep-awake": "2.1.0",
         "@capacitor/android": "3.0.0",
         "@capacitor/app": "1.0.0",
+        "@capacitor/browser": "1.0.1",
         "@capacitor/cli": "3.0.0",
+        "@capacitor/clipboard": "1.0.1",
         "@capacitor/core": "3.0.0",
         "@capacitor/device": "1.0.0",
         "@capacitor/dialog": "1.0.0",
         "@capacitor/filesystem": "1.0.0",
+        "@capacitor/haptics": "1.0.1",
         "@capacitor/ios": "2.4.6",
         "@capacitor/keyboard": "1.0.0",
         "@capacitor/network": "1.0.0",
