--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,3 +1,4 @@
+# yaml-language-server: $schema=https://json.schemastore.org/github-workflow.json
 name: Android build
 
 on:
@@ -29,8 +30,12 @@ jobs:
             ${{ runner.os }}-build-
             ${{ runner.os }}-
 
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '12'
       - name: Install Dependencies
-        run: npm install
+        run: npm ci
       - name: Build web
         run: npm run build
       - name: Setup JDK
