Downgrade extremely common errors to warnings

--- a/src/.eslintrc.json
+++ b/src/.eslintrc.json
@@ -14,6 +14,20 @@
   "rules": {
     "@typescript-eslint/triple-slash-reference": "off",
     "@typescript-eslint/no-non-null-assertion": "off",
-    "@typescript-eslint/semi": ["error", "never"]
+    "@typescript-eslint/semi": ["error", "never"],
+    "@typescript-eslint/no-unsafe-call": ["warn"],
+    "@typescript-eslint/no-for-in-array": ["warn"],
+    "@typescript-eslint/no-floating-promises": ["warn"],
+    "@typescript-eslint/no-misused-promises": ["warn"],
+    "@typescript-eslint/no-unnecessary-type-assertion": ["warn"],
+    "@typescript-eslint/no-unsafe-assignment": ["warn"],
+    "@typescript-eslint/no-unsafe-member-access": ["warn"],
+    "@typescript-eslint/no-unsafe-return": ["warn"],
+    "@typescript-eslint/prefer-regexp-exec": ["warn"],
+    "@typescript-eslint/restrict-plus-operands": ["warn"],
+    "@typescript-eslint/restrict-template-expressions": ["warn"],
+    "@typescript-eslint/require-await": ["warn"],
+    "@typescript-eslint/unbound-method": "off",
+    "no-unused-vars": "off"
   }
 }
