--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "homepage": "https://github.com/veloce/lichobile",
     "engines": {
         "node": "^14.17",
-        "npm": "^6.14"
+        "npm": "^7.19"
     },
     "browserslist": "and_chr >= 69, ios_saf >= 12",
     "devDependencies": {
@@ -32,11 +32,11 @@
         "@rollup/plugin-node-resolve": "8.0.0",
         "@rollup/plugin-strip": "1.3.3",
         "@types/jest": "24.0.11",
-        "@typescript-eslint/eslint-plugin": "4.11.0",
-        "@typescript-eslint/parser": "4.11.0",
+        "@typescript-eslint/eslint-plugin": "^4.11.0",
+        "@typescript-eslint/parser": "^4.11.0",
         "autoprefixer-stylus": "1.0.0",
         "concurrently": "5.0.0",
-        "eslint": "7.16.0",
+        "eslint": "^7.16.0",
         "http-server": "0.12.0",
         "jest": "^26.0.0",
         "jetifier": "1.6.5",
