--- a/package.json
+++ b/package.json
@@ -60,9 +60,9 @@
         "@rollup/plugin-alias": "3.1.1",
         "@types/d3": "4.5.0",
         "@types/lodash-es": "4.17.3",
-        "capacitor-sound-effect": "git+https://github.com/veloce/capacitor-sound-effect.git",
-        "capacitor-stockfish": "git+https://github.com/veloce/capacitor-stockfish.git",
-        "capacitor-stockfish-variants": "git+https://github.com/veloce/capacitor-stockfish.git#variants",
+        "capacitor-sound-effect": "git+https://git@github.com/veloce/capacitor-sound-effect.git",
+        "capacitor-stockfish": "git+https://git@github.com/veloce/capacitor-stockfish.git",
+        "capacitor-stockfish-variants": "git+https://git@github.com/veloce/capacitor-stockfish.git#variants",
         "chessops": "0.8.1",
         "cordova-plugin-fullscreen": "1.2.0",
         "d3-axis": "1.0.8",
@@ -73,7 +73,7 @@
         "d3-time-format": "2.0.5",
         "date-fns": "2.14.0",
         "lodash-es": "4.17.15",
-        "mithril": "git+https://github.com/veloce/mithril.js.git#next",
+        "mithril": "git+https://git@github.com/veloce/mithril.js.git#next",
         "rlite-router": "1.1.3",
         "signals": "1.0.0"
     },
