--- a/android/app/src/main/assets/capacitor.config.json
+++ b/android/app/src/main/assets/capacitor.config.json
@@ -7,6 +7,11 @@
   "backgroundColor": "000000ff",
   "appendUserAgent": "Lichobile/7.11.3",
   "plugins": {
+    "SplashScreen": {
+      "backgroundColor": "000000",
+      "launchAutoHide": false,
+      "androidSplashResourceName": "launch_splash"
+    },
     "PushNotifications": {
       "presentationOptions": ["sound", "alert"]
     }
