--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
         "@rollup/plugin-alias": "3.1.1",
         "@types/d3": "4.5.0",
         "@types/lodash-es": "4.17.3",
-        "capacitor-sound-effect": "file:../temp-sound-effect",
+        "capacitor-sound-effect": "git+https://github.com/veloce/capacitor-sound-effect.git#main",
         "capacitor-stockfish": "git+https://github.com/veloce/capacitor-stockfish.git#capacitor3",
         "capacitor-stockfish-variants": "file:../capacitor-stockfish-variants",
         "chessops": "0.8.1",
