--- a/ios/App/App/capacitor.config.json
+++ b/ios/App/App/capacitor.config.json
@@ -1,19 +1,21 @@
 {
-  "appId": "org.lichess.mobileapp",
-  "appName": "lichess",
-  "bundledWebRuntime": false,
-  "npmClient": "npm",
-  "webDir": "www",
-  "backgroundColor": "000000ff",
-  "appendUserAgent": "Lichobile/7.11.3",
-  "plugins": {
-    "SplashScreen": {
-      "backgroundColor": "000000",
-      "launchAutoHide": false,
-      "androidSplashResourceName": "launch_splash"
-    },
-    "PushNotifications": {
-      "presentationOptions": ["sound", "alert"]
-    }
-  }
+	"appId": "org.lichess.mobileapp",
+	"appName": "lichess",
+	"bundledWebRuntime": false,
+	"webDir": "www",
+	"backgroundColor": "000000ff",
+	"appendUserAgent": "Lichobile/7.11.3",
+	"plugins": {
+		"SplashScreen": {
+			"androidSplashResourceName": "launch_splash",
+			"launchAutoHide": false,
+			"useDialog": false
+		},
+		"PushNotifications": {
+			"presentationOptions": [
+				"sound",
+				"alert"
+			]
+		}
+	}
 }
