--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -4,6 +4,9 @@ android {
     ndkVersion '21.3.6528147'
     compileSdkVersion rootProject.ext.compileSdkVersion
     defaultConfig {
+        configurations.all {
+            resolutionStrategy { force 'androidx.core:core-ktx:1.6.0' }
+        }
         applicationId "org.lichess.mobileapp"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
