--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,20 +40,13 @@ jobs:
       - name: Build web
         run: npm run build
       - name: Setup JDK
-        uses: actions/setup-java@v1
+      - uses: actions/setup-java@v2
         with:
-          java-version: 1.8
+          distribution: 'temurin'
+          java-version: '11'
+          cache: 'gradle'
       - name: Sync android capacitor
         run: npx cap update android
-      - name: Cache Gradle packages
-        uses: actions/cache@v2
-        with:
-          path: |
-            ~/.gradle/caches
-            ~/.gradle/wrapper
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle-
       - name: Prepare build
         working-directory: ./node_modules/capacitor-stockfish/stockfish/src
         run: make net
@@ -68,9 +61,3 @@ jobs:
           path: |
             ./android/app/build/outputs/apk/withoutNNUE/debug/
             ./android/app/build/outputs/apk/withNNUE/debug/
-      - name: Cleanup Gradle Cache
-        # Remove some files from the Gradle cache, so they aren't cached by GitHub Actions.
-        # Restoring these files from a GitHub Actions cache might cause problems for future builds.
-        run: |
-          rm -f ~/.gradle/caches/modules-2/modules-2.lock
-          rm -f ~/.gradle/caches/modules-2/gc.properties
