--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
         "@rollup/plugin-alias": "3.1.1",
         "@types/d3": "4.5.0",
         "@types/lodash-es": "4.17.3",
-        "capacitor-sound-effect": "git+https://github.com/veloce/capacitor-sound-effect.git#main",
+        "capacitor-sound-effect": "2.0.1",
         "capacitor-stockfish": "git+https://github.com/veloce/capacitor-stockfish.git",
         "capacitor-stockfish-variants": "git+https://github.com/veloce/capacitor-stockfish.git#variants",
         "chessops": "0.8.1",
