--- a/scripts/package.json
+++ b/scripts/package.json
@@ -1,13 +1,13 @@
 {
   "scripts": {
-    "i18n-update": "npx tsc i18n-update.ts && node i18n-update.js"
+    "i18n-update": "node i18n-update.mjs"
   },
   "devDependencies": {
-    "@types/js-yaml": "^4.0.0",
+    "@octokit/request": "^5.6.2",
     "colors": "^1.3.3",
     "js-yaml": "^4.0.0",
-    "request": "^2.88.0",
-    "typescript": "^4.1.3",
+    "node-fetch": "^3.0.0",
     "xml2js": "^0.4.22"
-  }
+  },
+  "dependencies": {}
 }
