--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
         "@types/d3": "4.5.0",
         "@types/lodash-es": "4.17.3",
         "capacitor-sound-effect": "2.0.1",
-        "capacitor-stockfish": "git+https://github.com/veloce/capacitor-stockfish.git#v2.0.0",
+        "capacitor-stockfish": "git+https://github.com/veloce/capacitor-stockfish.git#sf14",
         "capacitor-stockfish-variants": "git+https://github.com/veloce/capacitor-stockfish-variants.git",
         "chessops": "0.8.1",
         "d3-axis": "1.0.8",
