--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     },
     "homepage": "https://github.com/veloce/lichobile",
     "engines": {
-        "node": "^14.17",
-        "npm": "^6.14"
+        "node": "^16.13",
+        "npm": "^8.1"
     },
     "browserslist": "and_chr >= 69, ios_saf >= 12",
     "devDependencies": {
@@ -76,8 +76,8 @@
         "@types/d3": "4.5.0",
         "@types/lodash-es": "4.17.3",
         "capacitor-sound-effect": "2.0.1",
-        "capacitor-stockfish": "3.0.0",
-        "capacitor-stockfish-variants": "1.0.0",
+        "capacitor-stockfish": "3.0.1",
+        "capacitor-stockfish-variants": "1.0.1",
         "chessops": "0.8.1",
         "d3-axis": "1.0.8",
         "d3-scale": "1.0.6",
@@ -96,7 +96,7 @@
         "serve": "http-server -p 8080 -s -g -c-1 .",
         "version": "node scripts/bump-version.js",
         "lint": "eslint src/ scripts/",
-        "test": "jest",
+        "test": "NODE_OPTIONS=--unhandled-rejections=warn jest",
         "i18n-update": "rimraf scripts/tmp/ && rimraf www/i18n/*.js && cd scripts && npm run i18n-update",
         "compile-date-locales": "node scripts/compile-date-locales",
         "styles": "stylus -q -u autoprefixer-stylus src/styl/index.styl -c -o www/css/compiled/app.css",
