--- a/package.json
+++ b/package.json
@@ -87,7 +87,7 @@
         "d3-time-format": "2.0.5",
         "date-fns": "2.14.0",
         "lodash-es": "4.17.21",
-        "mithril": "git+https://git@github.com/veloce/mithril.js.git#next",
+        "mithril": "github:veloce/mithril.js#next",
         "rlite-router": "1.1.3",
         "signals": "1.0.0"
     },
