--- a/ios/App/Podfile
+++ b/ios/App/Podfile
@@ -35,3 +35,11 @@ target 'lichess' do
   # Add your Pods here
   pod 'Firebase/Messaging'
 end
+
+post_install do |installer|
+  installer.pods_project.targets.each do |target|
+    target.build_configurations.each do |config|
+      config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '12.0'
+    end
+  end
+end
