--- a/android/app/capacitor.build.gradle
+++ b/android/app/capacitor.build.gradle
@@ -25,6 +25,7 @@ dependencies {
     implementation project(':capacitor-status-bar')
     implementation project(':capacitor-storage')
     implementation project(':capacitor-toast')
+    implementation project(':robingenz-capacitor-android-dark-mode-support')
     implementation project(':capacitor-sound-effect')
     implementation project(':capacitor-stockfish')
     implementation project(':capacitor-stockfish-variants')
