--- a/android/capacitor.settings.gradle
+++ b/android/capacitor.settings.gradle
@@ -50,6 +50,9 @@ project(':capacitor-storage').projectDir = new File('../node_modules/@capacitor/
 include ':capacitor-toast'
 project(':capacitor-toast').projectDir = new File('../node_modules/@capacitor/toast/android')
 
+include ':robingenz-capacitor-android-dark-mode-support'
+project(':robingenz-capacitor-android-dark-mode-support').projectDir = new File('../node_modules/@robingenz/capacitor-android-dark-mode-support/android')
+
 include ':capacitor-sound-effect'
 project(':capacitor-sound-effect').projectDir = new File('../node_modules/capacitor-sound-effect/android')
 
