--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -52,11 +52,14 @@ dependencies {
     testImplementation "junit:junit:$junitVersion"
     androidTestImplementation "androidx.test.ext:junit:$androidxJunitVersion"
     androidTestImplementation "androidx.test.espresso:espresso-core:$androidxEspressoCoreVersion"
+
+    // BEGIN NONFREE
     implementation('com.google.firebase:firebase-messaging:21.0.1') {
       exclude group: 'com.google.firebase', module: 'firebase-core'
       exclude group: 'com.google.firebase', module: 'firebase-analytics'
       exclude group: 'com.google.firebase', module: 'firebase-measurement-connector'
     }
+    // END NONFREE
 }
 
 apply from: 'capacitor.build.gradle'
