--- a/.github/actions/build-lichobile-apk/action.yml
+++ b/.github/actions/build-lichobile-apk/action.yml
@@ -1,4 +1,4 @@
-# yaml-language-server: $schema=https://json.schemastore.org/github-workflow.json
+# yaml-language-server: $schema=https://json.schemastore.org/github-action.json
 name: Lichobile APK
 description: Build a Debug APK of Lichobile Android app
 
