--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     },
     "browserslist": "and_chr >= 69, ios_saf >= 12",
     "devDependencies": {
+        "@capacitor/cli": "^4.0.0",
         "@rollup/plugin-alias": "3.1.1",
         "@rollup/plugin-commonjs": "12.0.0",
         "@rollup/plugin-json": "4.0.3",
@@ -53,32 +54,30 @@
     },
     "dependencies": {
         "@badrap/result": "0.2.6",
-        "@capacitor-community/keep-awake": "2.1.0",
-        "@capacitor/android": "3.6.0",
-        "@capacitor/app": "1.1.1",
-        "@capacitor/browser": "1.0.7",
-        "@capacitor/cli": "3.6.0",
-        "@capacitor/clipboard": "1.0.8",
-        "@capacitor/core": "3.6.0",
-        "@capacitor/device": "1.1.2",
-        "@capacitor/dialog": "1.0.7",
-        "@capacitor/filesystem": "1.1.0",
-        "@capacitor/haptics": "1.1.4",
-        "@capacitor/ios": "3.6.0",
-        "@capacitor/keyboard": "1.2.3",
-        "@capacitor/network": "1.0.7",
-        "@capacitor/push-notifications": "1.0.9",
-        "@capacitor/share": "1.1.2",
-        "@capacitor/splash-screen": "1.2.2",
-        "@capacitor/status-bar": "1.0.8",
-        "@capacitor/storage": "1.2.5",
-        "@capacitor/toast": "1.0.8",
-        "@robingenz/capacitor-android-dark-mode-support": "1.0.1",
+        "@capacitor-community/keep-awake": "3.0.0",
+        "@capacitor/android": "^4.0.0",
+        "@capacitor/app": "^4.0.0",
+        "@capacitor/browser": "^4.0.0",
+        "@capacitor/clipboard": "^4.0.0",
+        "@capacitor/core": "^4.0.0",
+        "@capacitor/device": "^4.0.0",
+        "@capacitor/dialog": "^4.0.0",
+        "@capacitor/filesystem": "^4.0.0",
+        "@capacitor/haptics": "^4.0.0",
+        "@capacitor/ios": "^4.0.0",
+        "@capacitor/keyboard": "^4.0.0",
+        "@capacitor/network": "^4.0.0",
+        "@capacitor/preferences": "4.0.2",
+        "@capacitor/push-notifications": "^4.0.0",
+        "@capacitor/share": "^4.0.0",
+        "@capacitor/splash-screen": "^4.0.0",
+        "@capacitor/status-bar": "^4.0.0",
+        "@capacitor/toast": "^4.0.0",
         "@types/d3": "4.5.0",
         "@types/lodash-es": "4.17.3",
-        "capacitor-sound-effect": "2.0.1",
-        "capacitor-stockfish": "3.0.2",
-        "capacitor-stockfish-variants": "1.0.1",
+        "capacitor-sound-effect": "3.0.0",
+        "capacitor-stockfish": "4.0.0",
+        "capacitor-stockfish-variants": "2.0.0",
         "chessops": "0.10.3",
         "d3-axis": "1.0.8",
         "d3-scale": "1.0.6",
